--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>[Her Name] - Portfolio</title>
+  <title>Karen Karolina Avila - Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>[Her Name]</h1>
-    <p class="tagline">Media Creator | Storyteller | Visual Artist</p>
+    <h1>Karen Karolina Avila</h1>
+    <p class="tagline">Media Creator | Visual Artist</p>
   </header>
 
   <nav>
@@ -23,7 +23,12 @@
   <section id="bio">
     <h2>About Me</h2>
     <p>
-      Hi! I’m [Her Name], a media creator passionate about telling stories through visuals, film, and digital design. I studied media in college and love exploring how creativity can impact people and culture.
+      Hi! My name Karen Karolina, Lorem ipsum dolor sit amet consectetur adipiscing elit. 
+      Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium
+       tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus 
+       fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer 
+       nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent 
+       per conubia nostra inceptos himenaeos.
     </p>
   </section>
 
@@ -33,7 +38,7 @@
       <!-- Example items -->
       <div class="item">
         <img src="work1.jpg" alt="Work Sample 1"/>
-        <p>Short Film: *Reflections*</p>
+        <p>Short Film: As Above, So Below</p>
       </div>
       <div class="item">
         <img src="work2.jpg" alt="Work Sample 2"/>
@@ -44,11 +49,11 @@
 
   <section id="contact">
     <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:her.email@example.com">her.email@example.com</a></p>
+    <p>Email: <a href="mailto:her.email@example.com">krockzilla@gmail.com</a></p>
   </section>
 
   <footer>
-    <p>© 2025 [Her Name]. All rights reserved.</p>
+    <p>© 2025 Karen Karolina Avila. All rights reserved.</p>
   </footer>
 
   <script src="script.js"></script>
