--- a/index.html
+++ b/index.html
@@ -14,43 +14,57 @@
 
   <nav>
     <ul>
-      <li><a href="#bio">About</a></li>
+      <li><a href="#about">About</a></li>
       <li><a href="#portfolio">Portfolio</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
 
-  <section id="bio">
-    <h2>About Me</h2>
-    <p>
-      Hi! My name Karen Karolina, Lorem ipsum dolor sit amet consectetur adipiscing elit. 
-      Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium
-       tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus 
-       fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer 
-       nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent 
-       per conubia nostra inceptos himenaeos.
-    </p>
-  </section>
+  <main class="content-wrapper">
 
-  <section id="portfolio">
-    <h2>My Work</h2>
-    <div class="gallery">
-      <!-- Example items -->
-      <div class="item">
-        <img src="work1.jpg" alt="Work Sample 1"/>
-        <p>Short Film: As Above, So Below</p>
+    <section id="about" class="about-section">
+      <div class="about-container">
+        <img src="images/karen.jpg" alt="Photo of Karen" class="profile-pic">
+        <div class="about-text">
+          <h2>About Me</h2>
+          <p>
+            Karen Karolina Avila is an award-winning filmmaker, freelance photographer, 
+            and camera operator based in California. A UC San Diego graduate with a Bachelor’s 
+            degree in Visual Arts & Media, her work combines visual storytelling and ideas of 
+            identity. Karen enjoys 35mm film photography, video editing, and performance art.
+          </p>
+        </div>
       </div>
-      <div class="item">
-        <img src="work2.jpg" alt="Work Sample 2"/>
-        <p>Poster Design for XYZ Project</p>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:her.email@example.com">krockzilla@gmail.com</a></p>
-  </section>
+    <section id="portfolio" class="portfolio-section">
+      <h2 class="portfolio-heading">My Work</h2>
+      <div class="gallery">
+        <div class="item">
+          <img src="work1.jpg" alt="Work Sample 1"/>
+          <p>Short Film: As Above, So Below</p>
+        </div>
+        <div class="item">
+          <img src="work2.jpg" alt="Work Sample 2"/>
+          <p>Graphic Design for XYZ Project</p>
+        </div>
+        <div class="item">
+          <img src="work3.jpg" alt="Work Sample 3"/>
+          <p>Installation Design</p>
+        </div>
+        <div class="item">
+          <img src="work4.jpg" alt="Work Sample 4"/>
+          <p>Darkroom Photography</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact" class="contact-section">
+      <h2>Contact Me</h2>
+      <p>Email: <a href="mailto:krockzilla@gmail.com">krockzilla@gmail.com</a></p>
+    </section>
+
+  </main>
 
   <footer>
     <p>© 2025 Karen Karolina Avila. All rights reserved.</p>
