Updated As Above, So Below description

--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
         <div class="work-description">
           <h3>Short Film: As Above, So Below</h3>
           <p>
-            An experimental short film exploring ancestral memory, grief, and liminality. 
-            Shot on 35mm and digital, this project merges sound and movement to explore transformation.
+            Inspired by the performance work of Ana Mendieta, the 2024 UC San Diego Film Festival Best Picture Winner: 
+            As Above, So Below is a  piece that explores ideas of mortality, the body returning to earth, and the 
+            solace that can be found in cycles of life.
           </p>
         </div>
         <div class="work-image">
