--- a/index.html
+++ b/index.html
@@ -116,13 +116,47 @@
           <img src="images/darkroom/eight.jpg" alt="Vivid Edit 9" class="lightbox-thumb" data-full="images/darkroom/eight.jpg">
         </div>
       </div>
+
+      <h3 class="subheading">Color Film</h3>
+      <div class="vivid-gallery">
+        <div class="image-box">
+          <img src="images/film photos/Brenda Wedding.jpg" alt="Vivid Edit 1" class="lightbox-thumb" data-full="images/film photos/Brenda Wedding.jpg">
+        </div>
+        <div class="image-box">
+          <img src="images/film photos/Chess at the Peoples Park.jpg" alt="Vivid Edit 2" class="lightbox-thumb" data-full="images/film photos/Chess at the Peoples Park.jpg">
+        </div>
+        <div class="image-box">
+          <img src="images/film photos/Friends at Dolores Park.jpg" alt="Vivid Edit 3" class="lightbox-thumb" data-full="images/film photos/Friends at Dolores Park.jpg">
+        </div>
+        <div class="image-box">
+          <img src="images/film photos/Intersection of San Francisco.jpg" alt="Vivid Edit 4" class="lightbox-thumb" data-full="images/film photos/Intersection of San Francisco.jpg">
+        </div>
+        <div class="image-box">
+          <img src="images/film photos/Japantown.JPG" alt="Vivid Edit 6" class="lightbox-thumb" data-full="images/film photos/Japantown.JPG">
+        </div>
+        <div class="image-box">
+          <img src="images/film photos/Kalea Kal Train.jpg" alt="Vivid Edit 7" class="lightbox-thumb" data-full="images/film photos/Kalea Kal Train.jpg">
+        </div>
+        <div class="image-box">
+          <img src="images/film photos/Maze Biker SF.jpg" alt="Vivid Edit 8" class="lightbox-thumb" data-full="images/film photos/Maze Biker SF.jpg">
+        </div>
+        <div class="image-box">
+          <img src="images/film photos/Rommie on the SF Skyline.jpg" alt="Vivid Edit 9" class="lightbox-thumb" data-full="images/film photos/Rommie on the SF Skyline.jpg">
+        </div>
+        <div class="image-box">
+          <img src="images/film photos/self portriat.jpg" alt="Vivid Edit 9" class="lightbox-thumb" data-full="images/film photos/self portriat.jpg">
+        </div>
+        <div class="image-box">
+          <img src="images/film photos/The San Diego Fairgrounds.jpg" alt="Vivid Edit 9" class="lightbox-thumb" data-full="images/film photos/The San Diego Fairgrounds.jpg">
+        </div>
+      </div>
       <!-- Add more .work-entry blocks below as needed -->
     
     </section>
 
     <section id="contact" class="contact-section">
       <h2>Contact Me</h2>
-      <p>Email: <a href="mailto:krockzilla@gmail.com">krockzilla@gmail.com</a></p>
+      <p>Email: krockzilla@gmail.com</p>
     </section>
 
   </main>
