Added Inside My Mind; Sounds of Serenity and fixed the layout of images

--- a/index.html
+++ b/index.html
@@ -50,11 +50,33 @@
             As Above, So Below is a  piece that explores ideas of mortality, the body returning to earth, and the 
             solace that can be found in cycles of life.
           </p>
+          <p>
+            Her award-winning short film is featured at the <a href="https://ucsdfilmfestival.com/2024" target="_blank" rel="noopener noreferrer">UCSD Film Festival 2024</a>
+          </p>
         </div>
         <div class="work-image">
           <a href="https://youtu.be/g4VSqUR9bO0?si=4fCpJPCTnSBP15dG" target="_blank" rel="noopener noreferrer">
             <img src="images/As Above So Below.png" alt="As Above, So Below Thumbnail">
           </a>
+        </div>
+      </div>
+
+      <div class="work-entry">
+        <div class="work-image">
+          <a href="https://youtu.be/g4VSqUR9bO0?si=4fCpJPCTnSBP15dG" target="_blank" rel="noopener noreferrer">
+            <img src="images/vivid edits/five.jpeg" alt="Inside My Mind; Sounds of Serenity Thumbnail">
+          </a>
+        </div>
+        <div class="work-description">
+          <h3>Inside My Mind; Sounds of Serenity</h3>
+          <p>
+            A dissection of femininity and specific habits of womanhood that have been passed down from my mother to myself. 
+            It touches on the scrutiny and guilt that women will face in their life for merely existing through poetry and 
+            juxtaposed imagery.
+          </p>
+          <p>
+            Her runner up short film is featured on the <a href="https://sites.google.com/ucsd.edu/kamilgallery/about/2023-kamil-media-awards?authuser=0" target="_blank" rel="noopener noreferrer">13th Annual Adam D. Kamil Media Awards</a>
+          </p>
         </div>
       </div>
 
