--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
           <img src="images/film photos/Kalea Kal Train.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Kalea Kal Train.jpg">
         </div>
         <div class="image-box">
+          <img src="images/film photos/Maze Biker SF.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Maze Biker SF.jpg">
+        </div>
+        <div class="image-box">
           <img src="images/film photos/Friends at Dolores Park.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Friends at Dolores Park.jpg">
         </div>
         <div class="image-box">
@@ -155,15 +158,17 @@
           <img src="images/film photos/Chess at the Peoples Park.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Chess at the Peoples Park.jpg">
         </div>
         <div class="image-box">
+          <img src="images/film photos/Amoeba Music Berkeley.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos//Amoeba Music Berkeley.jpg">
+        </div>
+        <div class="image-box">
           <img src="images/film photos/Intersection of San Francisco.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Intersection of San Francisco.jpg">
         </div>
         <div class="image-box">
-          <img src="images/film photos/Maze Biker SF.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Maze Biker SF.jpg">
+          <img src="images/film photos/Japantown.JPG" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Japantown.JPG">
         </div>
         <div class="image-box">
           <img src="images/film photos/The San Diego Fairgrounds.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/The San Diego Fairgrounds.jpg">
         </div>
-
         <!-- Then the vertical images -->
 
         <!-- Final horizontal -->
