--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
 </head>
 <body>
-  <header>
-    <h1>Karen Karolina Avila</h1>
-    <p class="tagline">Media Creator | Visual Artist</p>
+  <header class="banner">
+    <div class="banner-content">
+      
+    </div>
   </header>
 
   <nav>
