--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Karen Karolina Avila - Portfolio</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
+  <link rel="icon" type="image/png" href="assets/kitty.png">
 </head>
 <body>
   <header class="banner">
@@ -49,7 +49,7 @@
           <h3>Short Film: As Above, So Below</h3>
           <p>
             Inspired by the performance work of Ana Mendieta, the 2024 UC San Diego Film Festival Best Picture Winner: 
-            As Above, So Below is a  piece that explores ideas of mortality, the body returning to earth, and the 
+            As Above, So Below is a piece that explores ideas of mortality, the body returning to earth, and the 
             solace that can be found in cycles of life.
           </p>
           <p>
