Updated thumbnail for inside my mind sounds of serenity

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="work-entry">
         <div class="work-image">
           <a href="https://vimeo.com/823875170?share=copy)" target="_blank" rel="noopener noreferrer">
-            <img src="images/vivid edits/five.jpeg" alt="Inside My Mind; Sounds of Serenity Thumbnail">
+            <img src="images/inside_my_mind_sounds_of_serenity.png" alt="Inside My Mind; Sounds of Serenity Thumbnail">
           </a>
         </div>
         <div class="work-description">
