Updating website icon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Karen Karolina Avila - Portfolio</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="icon" type="image/png" href="assets/kitty.png">
+  <link rel="icon" type="image/png" href="assets/website_icon.png">
 </head>
 <body>
   <header class="banner">
