Adding linkedin in contact

--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
         <a href="https://www.youtube.com/@krockzilla" target="_blank">
           <i class="fab fa-youtube"></i>
         </a>
+        <a href="https://www.linkedin.com/in/karen-karolina-avila-a481bb291" target="_blank">
+          <i class="fab fa-linkedin"></i>
+        </a>
       </div>
     </section>
     
