Updated IMMSS description

--- a/index.html
+++ b/index.html
@@ -72,9 +72,8 @@
         <div class="work-description">
           <h3>Inside My Mind; Sounds of Serenity</h3>
           <p>
-            A dissection of femininity and specific habits of womanhood that have been passed down from my mother to myself. 
-            It touches on the scrutiny and guilt that women will face in their life for merely existing through poetry and 
-            juxtaposed imagery.
+            A dissection of femininity and habits of womanhood that have been passed down from mother to child. 
+            It touches on the scrutiny and guilt that women will face in their life for merely existing.
           </p>
           <p>
             Her runner up short film is featured on the <a href="https://sites.google.com/ucsd.edu/kamilgallery/about/2023-kamil-media-awards?authuser=0" target="_blank" rel="noopener noreferrer">13th Annual Adam D. Kamil Media Awards</a>
