Added Congratulations, you are now an American Citizen project

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -53,7 +54,7 @@
             solace that can be found in cycles of life.
           </p>
           <p>
-            Her award-winning short film is featured at the <a href="https://ucsdfilmfestival.com/2024" target="_blank" rel="noopener noreferrer">UCSD Film Festival 2024</a>
+            Her award-winning short film is featured at the <a href="https://ucsdfilmfestival.com/2024" target="_blank" rel="noopener noreferrer">2024 UCSD Film Festival</a>
           </p>
         </div>
         <div class="work-image">
@@ -78,6 +79,25 @@
           <p>
             Her runner up short film is featured on the <a href="https://sites.google.com/ucsd.edu/kamilgallery/about/2023-kamil-media-awards?authuser=0" target="_blank" rel="noopener noreferrer">13th Annual Adam D. Kamil Media Awards</a>
           </p>
+        </div>
+      </div>
+
+      <div class="work-entry">
+        <div class="work-description">
+          <h3>Congratulations, you are now an American Citizen</h3>
+          <p>
+            The story of two immigrant parents who left everything behind in search of a new life in the United States. 
+            Hoping for better opportunities for their children, this act of selflessness takes a toll on their sense 
+            of identity and community in a land that still feels foreign to them nearly two decades later.
+          </p>
+          <p>
+            Selected for the documentary category of the <a href="https://ucsdfilmfestival.com/2023" target="_blank" rel="noopener noreferrer">2023 UCSD Film Festival</a>
+          </p>
+        </div>
+        <div class="work-image">
+          <a href="https://youtu.be/g4VSqUR9bO0?si=4fCpJPCTnSBP15dG" target="_blank" rel="noopener noreferrer">
+            <img src="images/Congratulations you are now an American citizen.jpg" alt="Congratulations, you are now an American Citizen poster">
+          </a>
         </div>
       </div>
 
