Fixed centering alignment of profile picture, and fixed spacing between sections

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
     </section>
 
     <section id="portfolio" class="portfolio-section">
-      <h2 class="portfolio-heading">My Work</h2>
+      <h2 class="portfolio-heading">My Short Films</h2>
     
       <div class="work-entry">
         <div class="work-description">
-          <h3>Short Film: As Above, So Below</h3>
+          <h3>As Above, So Below</h3>
           <p>
             Inspired by the performance work of Ana Mendieta, the 2024 UC San Diego Film Festival Best Picture Winner: 
             As Above, So Below is a piece that explores ideas of mortality, the body returning to earth, and the 
