--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <nav>
     <ul>
       <li><a href="#about">About</a></li>
-      <li><a href="#portfolio">Portfolio</a></li>
+      <li><a href="photos.html">Portfolio</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
@@ -98,97 +98,6 @@
           <a href="https://youtu.be/g4VSqUR9bO0?si=4fCpJPCTnSBP15dG" target="_blank" rel="noopener noreferrer">
             <img src="images/Congratulations you are now an American citizen.jpg" alt="Congratulations, you are now an American Citizen poster">
           </a>
-        </div>
-      </div>
-
-      <h3 class="subheading">Edited Fujifilm</h3>
-      <div class="vivid-gallery">
-        <div class="image-box">
-          <img src="images/vivid edits/one.jpeg" alt="Vivid Edit 1" class="lightbox-thumb" data-full="images/vivid edits/one.jpeg">
-        </div>
-        <div class="image-box">
-          <img src="images/vivid edits/two.jpeg" alt="Vivid Edit 2" class="lightbox-thumb" data-full="images/vivid edits/two.jpeg">
-        </div>
-        <div class="image-box">
-          <img src="images/vivid edits/three.jpeg" alt="Vivid Edit 3" class="lightbox-thumb" data-full="images/vivid edits/three.jpeg">
-        </div>
-        <div class="image-box">
-          <img src="images/vivid edits/four.jpeg" alt="Vivid Edit 4" class="lightbox-thumb" data-full="images/vivid edits/four.jpeg">
-        </div>
-        <div class="image-box">
-          <img src="images/vivid edits/six.jpeg" alt="Vivid Edit 5" class="lightbox-thumb" data-full="images/vivid edits/six.jpeg">
-        </div>
-        <div class="image-box">
-          <img src="images/vivid edits/seven.jpeg" alt="Vivid Edit 6" class="lightbox-thumb" data-full="images/vivid edits/seven.jpeg">
-        </div>
-        <div class="image-box">
-          <img src="images/vivid edits/eight.jpeg" alt="Vivid Edit 7" class="lightbox-thumb" data-full="images/vivid edits/eight.jpeg">
-        </div>
-        <div class="image-box">
-          <img src="images/vivid edits/nine.jpeg" alt="Vivid Edit 8" class="lightbox-thumb" data-full="images/vivid edits/nine.jpeg">
-        </div>
-        <div class="image-box">
-          <img src="images/vivid edits/ten.jpeg" alt="Vivid Edit 9" class="lightbox-thumb" data-full="images/vivid edits/ten.jpeg">
-        </div>
-      </div>
-       
-      <h3 class="subheading">Black & White Darkroom</h3>
-      <div class="vivid-gallery">
-        <div class="image-box">
-          <img src="images/darkroom/two.jpg" alt="B&W Darkroom 1" class="lightbox-thumb" data-full="images/darkroom/two.jpg">
-        </div>
-        <div class="image-box">
-          <img src="images/darkroom/five.jpg" alt="B&W Darkroom 2" class="lightbox-thumb" data-full="images/darkroom/five.jpg">
-        </div>
-        <div class="image-box">
-          <img src="images/darkroom/seven.jpg" alt="B&W Darkroom 3" class="lightbox-thumb" data-full="images/darkroom/seven.jpg">
-        </div>
-        <div class="image-box">
-          <img src="images/darkroom/four.jpg" alt="B&W Darkroom 4" class="lightbox-thumb" data-full="images/darkroom/four.jpg">
-        </div>
-        <div class="image-box">
-          <img src="images/darkroom/eight.jpg" alt="B&W Darkroom 5" class="lightbox-thumb" data-full="images/darkroom/eight.jpg">
-        </div>
-        <div class="image-box">
-          <img src="images/darkroom/six.jpg" alt="B&W Darkroom 6" class="lightbox-thumb" data-full="images/darkroom/six.jpg">
-        </div>
-        <div class="image-box">
-          <img src="images/darkroom/three.jpg" alt="B&W Darkroom 7" class="lightbox-thumb" data-full="images/darkroom/three.jpg">
-        </div>
-        <div class="image-box">
-          <img src="images/darkroom/one.jpg" alt="B&W Darkroom 8" class="lightbox-thumb" data-full="images/darkroom/one.jpg">
-        </div>
-      </div>
-      
-
-      <h3 class="subheading">Color Film</h3>
-      <div class="vivid-gallery">
-        <div class="image-box">
-          <img src="images/film photos/Kalea Kal Train.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Kalea Kal Train.jpg">
-        </div>
-        <div class="image-box">
-          <img src="images/film photos/Maze Biker SF.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Maze Biker SF.jpg">
-        </div>
-        <div class="image-box">
-          <img src="images/film photos/Friends at Dolores Park.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Friends at Dolores Park.jpg">
-        </div>
-        <div class="image-box">
-          <img src="images/film photos/Rommie on the SF Skyline.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Rommie on the SF Skyline.jpg">
-        </div>
-        <div class="image-box">
-          <img src="images/film photos/Chess at the Peoples Park.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Chess at the Peoples Park.jpg">
-        </div>
-        <div class="image-box">
-          <img src="images/film photos/Amoeba Music Berkeley.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos//Amoeba Music Berkeley.jpg">
-        </div>
-        <div class="image-box">
-          <img src="images/film photos/Intersection of San Francisco.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Intersection of San Francisco.jpg">
-        </div>
-        <div class="image-box">
-          <img src="images/film photos/Japantown.JPG" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Japantown.JPG">
-        </div>
-        <div class="image-box">
-          <img src="images/film photos/The San Diego Fairgrounds.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/The San Diego Fairgrounds.jpg">
         </div>
       </div>
       <!-- Add more .work-entry blocks below as needed -->
