--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
   <nav>
     <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="photos.html">Portfolio</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="/">About</a></li>
+      <li><a href="/">Photos</a></li>
+      <li><a href="index.html#contact">Contact</a></li>
     </ul>
   </nav>
 
