--- a/photos.html
+++ b/photos.html
@@ -19,8 +19,8 @@
 
   <nav>
     <ul>
-      <li><a href="index.html">About</a></li>
-      <li><a href="photos.html">Portfolio</a></li>
+      <li><a href="/">About</a></li>
+      <li><a href="/">Photos</a></li>
       <li><a href="index.html#contact">Contact</a></li>
     </ul>
   </nav>
@@ -125,6 +125,6 @@
       <img id="lightbox-img" src="" alt="Expanded image" />
     </div>
   </div>
-  
+
 </body>
 </html>
