--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
   <nav>
     <ul>
-      <li><a href="/index.html">About</a></li>
-      <li><a href="/photos.html">Photos</a></li>
+      <li><a href="index.html">About</a></li>
+      <li><a href="photos.html">Photos</a></li>
       <li><a href="index.html#contact">Contact</a></li>
     </ul>
   </nav>
