--- a/photos.html
+++ b/photos.html
@@ -19,9 +19,9 @@
 
   <nav>
     <ul>
-      <li><a href="index.html">About</a></li>
-      <li><a href="photos.html">Photos</a></li>
-      <li><a href="index.html#contact">Contact</a></li>
+      <li><a href="index">About</a></li>
+      <li><a href="photos">Photos</a></li>
+      <li><a href="index">Contact</a></li>
     </ul>
   </nav>
   <!-- Navbar if you want -->
