--- a/photos.html
+++ b/photos.html
@@ -21,7 +21,7 @@
     <ul>
       <li><a href="index">About</a></li>
       <li><a href="photos">Photos</a></li>
-      <li><a href="index">Contact</a></li>
+      <li><a href="film">Film</a></li>
     </ul>
   </nav>
   <!-- Navbar if you want -->
