--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Karen Karolina Avila - Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="icon" type="image/png" href="assets/website_icon.png">
 </head>
@@ -21,7 +21,7 @@
     <ul>
       <li><a href="index">About</a></li>
       <li><a href="photos">Photos</a></li>
-      <li><a href="index">Contact</a></li>
+      <li><a href="film">Film</a></li>
     </ul>
   </nav>
 
