Updated url links, changed order of photography section, added link to first film

--- a/films.html
+++ b/films.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Film</title>
+    <title>Karen Karolina Avila - Films</title>
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="icon" type="image/png" href="assets/website_icon.png">
@@ -20,8 +20,8 @@
       <nav>
         <ul>
           <li><a href="index">About</a></li>
-          <li><a href="photos">Photos</a></li>
-          <li><a href="film">Film</a></li>
+          <li><a href="photography">Photography</a></li>
+          <li><a href="films">Films</a></li>
         </ul>
       </nav>
 
@@ -39,7 +39,7 @@
                     <a href="images/film stills/2024/Alegrías - Bodies NPR Tiny Desk.png" class="lightbox-trigger">
                         <img src="images/film stills/2024/Alegrías - Bodies NPR Tiny Desk.png" alt="Alegrías project still">
                     </a>
-                    <div class="project-title">Alegrías – Bodies for NPR Tiny Desk Submission <span class="unreleased">*</span></div>
+                    <div class="project-title">Alegrías – Bodies for <a href="https://www.youtube.com/watch?v=qaGY5Jn1T_A">NPR Tiny Desk Submission</a></div>
                     <div class="roles">Director of Photography, Video Editor | Co-Directed with Dana Del Castillo</div>
                     <div class="director">Directed by Dana Del Castillo</div>
                 </div>
@@ -51,15 +51,6 @@
                     <div class="project-title">Samurai Hapa <span class="unreleased">*</span></div>
                     <div class="roles">Assistant Director, Executive Producer, Costume Designer, Production Design</div>
                     <div class="director">Directed by Kai Zeger</div>
-                </div>
-
-                <div class="project-card item">
-                    <a href="images/film stills/2024/In the Flesh.png" class="lightbox-trigger">
-                        <img src="images/film stills/2024/In the Flesh.png" alt="In the Flesh thumbnail">
-                    </a>
-                    <div class="project-title">In the Flesh <span class="unreleased">*</span></div>
-                    <div class="roles">Art Direction, Producer</div>
-                    <div class="director">Directed by Hailey Cross</div>
                 </div>
 
                 <div class="project-card item">
@@ -98,6 +89,15 @@
                     <div class="roles">Producer, Production Assistant</div>
                     <div class="director">Directed by Dana Del Castillo</div>
                     <div class="festival">Featured in the UCSD Film Festival experimental category 2024</div>
+                </div>
+
+                <div class="project-card item">
+                    <a href="images/film stills/2024/In the Flesh.png" class="lightbox-trigger">
+                        <img src="images/film stills/2024/In the Flesh.png" alt="In the Flesh thumbnail">
+                    </a>
+                    <div class="project-title">In the Flesh <span class="unreleased">*</span></div>
+                    <div class="roles">Art Direction, Producer</div>
+                    <div class="director">Directed by Hailey Cross</div>
                 </div>
 
                 <div class="project-card item">
