--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <nav>
     <ul>
       <li><a href="index">About</a></li>
-      <li><a href="photos">Photos</a></li>
-      <li><a href="film">Film</a></li>
+      <li><a href="photography">Photography</a></li>
+      <li><a href="films">Films</a></li>
     </ul>
   </nav>
 
