--- a/photography.html
+++ b/photography.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Photos</title>
+  <title>Karen Karolina Avila - Photography</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="icon" type="image/png" href="assets/website_icon.png">
@@ -20,12 +20,43 @@
   <nav>
     <ul>
       <li><a href="index">About</a></li>
-      <li><a href="photos">Photos</a></li>
-      <li><a href="film">Film</a></li>
+      <li><a href="photography">Photography</a></li>
+      <li><a href="film">Films</a></li>
     </ul>
   </nav>
   <!-- Navbar if you want -->
   <section id="portfolio" class="portfolio-section">
+    <h3 class="subheading">Color Film</h3>
+    <div class="vivid-gallery">
+      <div class="image-box">
+        <img src="images/film photos/Kalea Kal Train.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Kalea Kal Train.jpg">
+      </div>
+      <div class="image-box">
+        <img src="images/film photos/Maze Biker SF.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Maze Biker SF.jpg">
+      </div>
+      <div class="image-box">
+        <img src="images/film photos/Friends at Dolores Park.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Friends at Dolores Park.jpg">
+      </div>
+      <div class="image-box">
+        <img src="images/film photos/Rommie on the SF Skyline.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Rommie on the SF Skyline.jpg">
+      </div>
+      <div class="image-box">
+        <img src="images/film photos/Chess at the Peoples Park.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Chess at the Peoples Park.jpg">
+      </div>
+      <div class="image-box">
+        <img src="images/film photos/Amoeba Music Berkeley.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos//Amoeba Music Berkeley.jpg">
+      </div>
+      <div class="image-box">
+        <img src="images/film photos/Intersection of San Francisco.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Intersection of San Francisco.jpg">
+      </div>
+      <div class="image-box">
+        <img src="images/film photos/Japantown.JPG" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Japantown.JPG">
+      </div>
+      <div class="image-box">
+        <img src="images/film photos/The San Diego Fairgrounds.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/The San Diego Fairgrounds.jpg">
+      </div>
+    </div>
+
     <h3 class="subheading">Edited Fujifilm</h3>
       <div class="vivid-gallery">
         <div class="image-box">
@@ -85,37 +116,6 @@
         </div>
       </div>
       
-
-      <h3 class="subheading">Color Film</h3>
-      <div class="vivid-gallery">
-        <div class="image-box">
-          <img src="images/film photos/Kalea Kal Train.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Kalea Kal Train.jpg">
-        </div>
-        <div class="image-box">
-          <img src="images/film photos/Maze Biker SF.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Maze Biker SF.jpg">
-        </div>
-        <div class="image-box">
-          <img src="images/film photos/Friends at Dolores Park.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Friends at Dolores Park.jpg">
-        </div>
-        <div class="image-box">
-          <img src="images/film photos/Rommie on the SF Skyline.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Rommie on the SF Skyline.jpg">
-        </div>
-        <div class="image-box">
-          <img src="images/film photos/Chess at the Peoples Park.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Chess at the Peoples Park.jpg">
-        </div>
-        <div class="image-box">
-          <img src="images/film photos/Amoeba Music Berkeley.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos//Amoeba Music Berkeley.jpg">
-        </div>
-        <div class="image-box">
-          <img src="images/film photos/Intersection of San Francisco.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Intersection of San Francisco.jpg">
-        </div>
-        <div class="image-box">
-          <img src="images/film photos/Japantown.JPG" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/Japantown.JPG">
-        </div>
-        <div class="image-box">
-          <img src="images/film photos/The San Diego Fairgrounds.jpg" alt="Color Film" class="lightbox-thumb" data-full="images/film photos/The San Diego Fairgrounds.jpg">
-        </div>
-      </div>
   </section>
 
   <script src="script.js"></script>
