Photography -> Films link working now

--- a/photography.html
+++ b/photography.html
@@ -21,7 +21,7 @@
     <ul>
       <li><a href="index">About</a></li>
       <li><a href="photography">Photography</a></li>
-      <li><a href="film">Films</a></li>
+      <li><a href="films">Films</a></li>
     </ul>
   </nav>
   <!-- Navbar if you want -->
