Updated open new tab on link click and some word detail changes

--- a/films.html
+++ b/films.html
@@ -41,7 +41,7 @@
                     </a>
                     <div class="project-title"><a href="https://www.youtube.com/watch?v=qaGY5Jn1T_A">Alegrías – Bodies </a> for NPR Tiny Desk Submission</div>
                     <div class="roles">Director of Photography, Video Editor</div>
-                    <div class="director">Directed with Dana Del Castillo</div>
+                    <div class="director">Co-directed with Dana Del Castillo</div>
                 </div>
 
                 <div class="project-card item">
@@ -113,7 +113,7 @@
                     <a href="images/film stills/2024/Flotsam.png" class="lightbox-trigger">
                         <img src="images/film stills/2024/Flotsam.png" alt="Flotsam thumbnail">
                     </a>
-                    <div class="project-title"><a href="https://youtu.be/O7qPc8E_AsE?si=-_DvGsAbopSQS48E">Flotsam</a></div>
+                    <div class="project-title"><a href="https://youtu.be/O7qPc8E_AsE?si=-_DvGsAbopSQS48E" target="_blank" rel="noopener noreferrer">Flotsam</a></div>
                     <div class="roles">Key Grip, Best Boy</div>
                     <div class="director">Directed by James DeLisio</div>
                 </div>
@@ -161,7 +161,7 @@
                     <a href="images/film stills/2023/Ouroboros.png" class="lightbox-trigger">
                         <img src="images/film stills/2023/Ouroboros.png" alt="Ouroboros still">
                     </a>
-                    <div class="project-title"><a href="https://youtu.be/97yXGTcIZsc?si=_9_dda87BuNUOSx3">Ouroboros</a></div>
+                    <div class="project-title"><a href="https://youtu.be/97yXGTcIZsc?si=_9_dda87BuNUOSx3" target="_blank" rel="noopener noreferrer">Ouroboros</a></div>
                     <div class="roles">Assistant Director, Editor, Producer</div>
                     <div class="director">Directed by Myra Soto</div>
                 </div>
@@ -170,9 +170,9 @@
                     <a href="images/film stills/2023/This is Home.png" class="lightbox-trigger">
                         <img src="images/film stills/2023/This is Home.png" alt="This is Home still">
                     </a>
-                    <div class="project-title"><a href="https://youtu.be/5paHuGBky8o?si=jyqSW_vzWuumvcw5">This is Home</a></div>
+                    <div class="project-title"><a href="https://youtu.be/5paHuGBky8o?si=jyqSW_vzWuumvcw5" target="_blank" rel="noopener noreferrer">This is Home</a></div>
                     <div class="roles">Director, Sound Mixer</div>
-                    <div class="director">By Karen Karolina Avila</div>
+                    <div class="director">Directed by Karen Karolina Avila</div>
                 </div>
 
                 <div class="project-card item">
