Added - between 12 Gauges name

--- a/films.html
+++ b/films.html
@@ -76,7 +76,7 @@
                     <a href="images/film stills/2024/12 Gauge Trixie Lilac.png" class="lightbox-trigger">
                         <img src="images/film stills/2024/12 Gauge Trixie Lilac.png" alt="12 Gauge Trixie Lilac thumbnail">
                     </a>
-                    <div class="project-title"><a href="https://www.youtube.com/watch?v=2_sXFwhLzTI">12 Gauge Trixie Lilac</a></div>
+                    <div class="project-title"><a href="https://www.youtube.com/watch?v=2_sXFwhLzTI">12 Gauge Trixie - Lilac</a></div>
                     <div class="roles">Additional Camera Operator, Production Assistant</div>
                     <div class="director">Directed by Macey Keung</div>
                 </div>
