Changed quality of Mi Media Naranja thumbnail

--- a/films.html
+++ b/films.html
@@ -54,8 +54,8 @@
                 </div>
 
                 <div class="project-card item">
-                    <a href="images/film stills/2024/Mi Media Naranja.jpg" class="lightbox-trigger">
-                        <img src="images/film stills/2024/Mi Media Naranja.jpg" alt="Mi Media Naranja thumbnail">
+                    <a href="images/film stills/2024/Mi_Media_Naranja.png" class="lightbox-trigger">
+                        <img src="images/film stills/2024/Mi_Media_Naranja.png" alt="Mi Media Naranja thumbnail">
                     </a>
                     <div class="project-title">Mi Media Naranja <span class="unreleased">*</span></div>
                     <div class="roles">Head of Art Direction, Costuming, Production Assistant</div>
