mobile update for profile page

--- a/films.html
+++ b/films.html
@@ -13,17 +13,17 @@
 <body>
     <header class="banner">
         <div class="banner-content">
-            
+            <!-- Your banner content here -->
         </div>
     </header>
-    
+
     <nav>
         <ul>
-          <li><a href="index">About</a></li>
-          <li><a href="photography">Photography</a></li>
-          <li><a href="films">Films</a></li>
+            <li><a href="index">About</a></li>
+            <li><a href="photography">Photography</a></li>
+            <li><a href="films">Films</a></li>
         </ul>
-      </nav>
+    </nav>
 
     <section class="portfolio-section">
 
