--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
 
   <nav>
     <ul>
-      <li><a href="index">About</a></li>
+      <li><a href="portfolio">About</a></li>
       <li><a href="photography">Photography</a></li>
       <li><a href="films">Films</a></li>
     </ul>
