--- a/index.html
+++ b/index.html
@@ -103,6 +103,20 @@
       <!-- Add more .work-entry blocks below as needed -->
     </section>
 
+    <section class="navigate-section">
+      <h2>Explore More</h2>
+      <div class="navigate-boxes">
+        <a href="photography.html" class="nav-box">
+          <img src="images/photography_thumb.jpg" alt="Photography Thumbnail">
+          <span>Photography</span>
+        </a>
+        <a href="films.html" class="nav-box">
+          <img src="images/films_thumb.jpg" alt="Films Thumbnail">
+          <span>Films</span>
+        </a>
+      </div>
+    </section>
+
     <section id="contact" class="contact-section">
       <h2>Contact Me</h2>
       <p>Email: krockzilla@gmail.com</p>
