--- a/films.html
+++ b/films.html
@@ -8,7 +8,7 @@
     <title>Karen Karolina Avila - Films</title>
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="icon" type="image/png" href="assets/website_icon.png">
+    <link rel="icon" type="image/png" href="assets/website_icon.jpg">
   </head>
 <body>
     <header class="banner">
@@ -36,8 +36,8 @@
             <div class="projects">
 
                 <div class="project-card item">
-                    <a href="images/film stills/2024/Alegrías - Bodies NPR Tiny Desk.png" class="lightbox-trigger">
-                        <img src="images/film stills/2024/Alegrías - Bodies NPR Tiny Desk.png" alt="Alegrías project still">
+                    <a href="images/film stills/2024/Alegrías - Bodies NPR Tiny Desk.jpg" class="lightbox-trigger">
+                        <img src="images/film stills/2024/Alegrías - Bodies NPR Tiny Desk.jpg" alt="Alegrías project still">
                     </a>
                     <div class="project-title"><a href="https://www.youtube.com/watch?v=qaGY5Jn1T_A">Alegrías – Bodies </a> for NPR Tiny Desk Submission</div>
                     <div class="roles">Director of Photography, Video Editor</div>
@@ -45,8 +45,8 @@
                 </div>
 
                 <div class="project-card item">
-                    <a href="images/film stills/2024/Samurai Hapa.png" class="lightbox-trigger">
-                        <img src="images/film stills/2024/Samurai Hapa.png" alt="Samurai Hapa still" />
+                    <a href="images/film stills/2024/Samurai Hapa.jpg" class="lightbox-trigger">
+                        <img src="images/film stills/2024/Samurai Hapa.jpg" alt="Samurai Hapa still" />
                     </a>
                     <div class="project-title">Samurai Hapa <span class="unreleased">*</span></div>
                     <div class="roles">Assistant Director, Executive Producer, Costume Designer, Production Design</div>
@@ -54,8 +54,8 @@
                 </div>
 
                 <div class="project-card item">
-                    <a href="images/film stills/2024/Mi_Media_Naranja.png" class="lightbox-trigger">
-                        <img src="images/film stills/2024/Mi_Media_Naranja.png" alt="Mi Media Naranja thumbnail">
+                    <a href="images/film stills/2024/Mi Media Naranja.jpg" class="lightbox-trigger">
+                        <img src="images/film stills/2024/Mi Media Naranja.jpg" alt="Mi Media Naranja thumbnail">
                     </a>
                     <div class="project-title">Mi Media Naranja <span class="unreleased">*</span></div>
                     <div class="roles">Head of Art Direction, Costuming, Production Assistant</div>
@@ -63,8 +63,8 @@
                 </div>
 
                 <div class="project-card item">
-                    <a href="images/film stills/2024/Under the Overpass.png" class="lightbox-trigger">
-                        <img src="images/film stills/2024/Under the Overpass.png" alt="Under the Overpass thumbnail">
+                    <a href="images/film stills/2024/Under the Overpass.jpg" class="lightbox-trigger">
+                        <img src="images/film stills/2024/Under the Overpass.jpg" alt="Under the Overpass thumbnail">
                     </a>
                     <div class="project-title">Under The Overpass <span class="unreleased">*</span></div>
                     <div class="roles">Camera, Sound</div>
@@ -73,8 +73,8 @@
                 </div>
 
                 <div class="project-card item">
-                    <a href="images/film stills/2024/12 Gauge Trixie Lilac.png" class="lightbox-trigger">
-                        <img src="images/film stills/2024/12 Gauge Trixie Lilac.png" alt="12 Gauge Trixie Lilac thumbnail">
+                    <a href="images/film stills/2024/12 Gauge Trixie Lilac.jpg" class="lightbox-trigger">
+                        <img src="images/film stills/2024/12 Gauge Trixie Lilac.jpg" alt="12 Gauge Trixie Lilac thumbnail">
                     </a>
                     <div class="project-title"><a href="https://www.youtube.com/watch?v=2_sXFwhLzTI">12 Gauge Trixie - Lilac</a></div>
                     <div class="roles">Additional Camera Operator, Production Assistant</div>
@@ -82,8 +82,8 @@
                 </div>
 
                 <div class="project-card item">
-                    <a href="images/film stills/2024/Pinya.png" class="lightbox-trigger">
-                        <img src="images/film stills/2024/Pinya.png" alt="Pinya thumbnail">
+                    <a href="images/film stills/2024/Pinya.jpg" class="lightbox-trigger">
+                        <img src="images/film stills/2024/Pinya.jpg" alt="Pinya thumbnail">
                     </a>
                     <div class="project-title">Pinya <span class="unreleased">*</span></div>
                     <div class="roles">Producer, Production Assistant</div>
@@ -92,8 +92,8 @@
                 </div>
 
                 <div class="project-card item">
-                    <a href="images/film stills/2024/In the Flesh.png" class="lightbox-trigger">
-                        <img src="images/film stills/2024/In the Flesh.png" alt="In the Flesh thumbnail">
+                    <a href="images/film stills/2024/In the Flesh.jpg" class="lightbox-trigger">
+                        <img src="images/film stills/2024/In the Flesh.jpg" alt="In the Flesh thumbnail">
                     </a>
                     <div class="project-title">In the Flesh <span class="unreleased">*</span></div>
                     <div class="roles">Art Direction, Producer</div>
@@ -101,8 +101,8 @@
                 </div>
 
                 <div class="project-card item">
-                    <a href="images/film stills/2024/Three Friends Swallowed Whole.png" class="lightbox-trigger">
-                        <img src="images/film stills/2024/Three Friends Swallowed Whole.png" alt="Three Friends Swallowed Whole thumbnail">
+                    <a href="images/film stills/2024/Three Friends Swallowed Whole.jpg" class="lightbox-trigger">
+                        <img src="images/film stills/2024/Three Friends Swallowed Whole.jpg" alt="Three Friends Swallowed Whole thumbnail">
                     </a>
                     <div class="project-title">Three Friends Swallowed Whole <span class="unreleased">*</span></div>
                     <div class="roles">Producer, Grip, Production Assistant</div>
@@ -110,8 +110,8 @@
                 </div>
 
                 <div class="project-card item">
-                    <a href="images/film stills/2024/Flotsam.png" class="lightbox-trigger">
-                        <img src="images/film stills/2024/Flotsam.png" alt="Flotsam thumbnail">
+                    <a href="images/film stills/2024/Flotsam.jpg" class="lightbox-trigger">
+                        <img src="images/film stills/2024/Flotsam.jpg" alt="Flotsam thumbnail">
                     </a>
                     <div class="project-title"><a href="https://youtu.be/O7qPc8E_AsE?si=-_DvGsAbopSQS48E" target="_blank" rel="noopener noreferrer">Flotsam</a></div>
                     <div class="roles">Key Grip, Best Boy</div>
@@ -129,8 +129,8 @@
             <div class="projects">
 
                 <div class="project-card item">
-                    <a href="images/film stills/2023/Three Pochos.png" class="lightbox-trigger">
-                        <img src="images/film stills/2023/Three Pochos.png" alt="Three Ponchos still">
+                    <a href="images/film stills/2023/Three Pochos.jpg" class="lightbox-trigger">
+                        <img src="images/film stills/2023/Three Pochos.jpg" alt="Three Ponchos still">
                     </a>
                     <div class="project-title"><a href="https://www.youtube.com/watch?v=-875jByezII">Three Pochos</a></div>
                     <div class="roles">Key Grip, Gaffer, Sound Recordist, Producer</div>
@@ -139,8 +139,8 @@
                 </div>
 
                 <div class="project-card item">
-                    <a href="images/film stills/2023/La Paloma.png" class="lightbox-trigger">
-                        <img src="images/film stills/2023/La Paloma.png" alt="La Paloma still">
+                    <a href="images/film stills/2023/La Paloma.jpg" class="lightbox-trigger">
+                        <img src="images/film stills/2023/La Paloma.jpg" alt="La Paloma still">
                     </a>
                     <div class="project-title">La Paloma <span class="unreleased">*</span></div>
                     <div class="roles">Costume Designer, Production Assistant</div>
@@ -149,8 +149,8 @@
                 </div>
 
                 <div class="project-card item">
-                    <a href="images/film stills/2023/boy grum.png" class="lightbox-trigger">
-                        <img src="images/film stills/2023/boy grum.png" alt="boy grum still">
+                    <a href="images/film stills/2023/boy grum.jpg" class="lightbox-trigger">
+                        <img src="images/film stills/2023/boy grum.jpg" alt="boy grum still">
                     </a>
                     <div class="project-title"><a href="https://vimeo.com/998014587">Boy Grum</a></div>
                     <div class="roles">Production Designer, Executive Producer, Assistant Camera, Foley Artist</div>
@@ -158,8 +158,8 @@
                 </div>
 
                 <div class="project-card item">
-                    <a href="images/film stills/2023/Ouroboros.png" class="lightbox-trigger">
-                        <img src="images/film stills/2023/Ouroboros.png" alt="Ouroboros still">
+                    <a href="images/film stills/2023/Ouroboros.jpg" class="lightbox-trigger">
+                        <img src="images/film stills/2023/Ouroboros.jpg" alt="Ouroboros still">
                     </a>
                     <div class="project-title"><a href="https://youtu.be/97yXGTcIZsc?si=_9_dda87BuNUOSx3" target="_blank" rel="noopener noreferrer">Ouroboros</a></div>
                     <div class="roles">Assistant Director, Editor, Producer</div>
@@ -167,8 +167,8 @@
                 </div>
 
                 <div class="project-card item">
-                    <a href="images/film stills/2023/This is Home.png" class="lightbox-trigger">
-                        <img src="images/film stills/2023/This is Home.png" alt="This is Home still">
+                    <a href="images/film stills/2023/This is Home.jpg" class="lightbox-trigger">
+                        <img src="images/film stills/2023/This is Home.jpg" alt="This is Home still">
                     </a>
                     <div class="project-title"><a href="https://youtu.be/5paHuGBky8o?si=jyqSW_vzWuumvcw5" target="_blank" rel="noopener noreferrer">This is Home</a></div>
                     <div class="roles">Director, Sound Mixer</div>
@@ -176,8 +176,8 @@
                 </div>
 
                 <div class="project-card item">
-                    <a href="images/film stills/2023/Devour.png" class="lightbox-trigger">
-                        <img src="images/film stills/2023/Devour.png" alt="Devour still">
+                    <a href="images/film stills/2023/Devour.jpg" class="lightbox-trigger">
+                        <img src="images/film stills/2023/Devour.jpg" alt="Devour still">
                     </a>
                     <div class="project-title">Devour <span class="unreleased">*</span></div>
                     <div class="roles">Actress</div>
@@ -194,8 +194,8 @@
             <div class="projects">
 
                 <div class="project-card item">
-                    <a href="images/film stills/2022/Mango Cherry.png" class="lightbox-trigger">
-                        <img src="images/film stills/2022/Mango Cherry.png" alt="Mango Cherry still">
+                    <a href="images/film stills/2022/Mango Cherry.jpg" class="lightbox-trigger">
+                        <img src="images/film stills/2022/Mango Cherry.jpg" alt="Mango Cherry still">
                     </a>
                     <div class="project-title"><a href="https://www.youtube.com/watch?v=wvOL8SBDzkI">Mango Cherry</a></div>
                     <div class="roles">Colorist, Production Assistant</div>
@@ -203,8 +203,8 @@
                 </div>
 
                 <div class="project-card item">
-                    <a href="images/film stills/2022/Rochelle, Rochelle.png" class="lightbox-trigger">
-                        <img src="images/film stills/2022/Rochelle, Rochelle.png" alt="Rochelle still">
+                    <a href="images/film stills/2022/Rochelle, Rochelle.jpg" class="lightbox-trigger">
+                        <img src="images/film stills/2022/Rochelle, Rochelle.jpg" alt="Rochelle still">
                     </a>
                     <div class="project-title">Rochelle, Rochelle <span class="unreleased">*</span></div>
                     <div class="roles">Set Dresser, Production Assistant</div>
