Added navigation cards at the bottom of index.html

--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
     </section>
 
     <section class="navigate-section">
-      <h2>Explore More</h2>
+      <h2>Other Work</h2>
       <div class="navigate-boxes">
-        <a href="photography.html" class="nav-box">
-          <img src="images/photography_thumb.jpg" alt="Photography Thumbnail">
+        <a href="photography" class="nav-box">
+          <img src="images/vivid edits/one.jpeg" alt="Photography Thumbnail">
           <span>Photography</span>
         </a>
-        <a href="films.html" class="nav-box">
-          <img src="images/films_thumb.jpg" alt="Films Thumbnail">
+        <a href="films" class="nav-box">
+          <img src="images/film stills/2023/boy grum.jpg" alt="Films Thumbnail">
           <span>Films</span>
         </a>
       </div>
