Removing nav cards

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <!-- Add more .work-entry blocks below as needed -->
     </section>
 
-    <section class="navigate-section">
+    <!-- <section class="navigate-section">
       <h2>Other Work</h2>
       <div class="navigate-boxes">
         <a href="photography" class="nav-box">
@@ -115,26 +115,8 @@
           <span>Films</span>
         </a>
       </div>
-    </section>
-
-    <section id="contact" class="contact-section">
-      <h2>Contact Me</h2>
-      <p>Email: krockzilla@gmail.com</p>
-      
-      <div class="social-icons">
-        <a href="https://www.instagram.com/krockzilla/" target="_blank">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a href="https://www.youtube.com/@krockzilla" target="_blank">
-          <i class="fab fa-youtube"></i>
-        </a>
-        <a href="https://www.linkedin.com/in/karen-karolina-avila-a481bb291" target="_blank">
-          <i class="fab fa-linkedin"></i>
-        </a>
-      </div>
-    </section>
+    </section> -->
     
-
   </main>
 
   <footer>
