Added contacts back

--- a/index.html
+++ b/index.html
@@ -116,7 +116,25 @@
         </a>
       </div>
     </section> -->
+
+    <section id="contact" class="contact-section">
+      <h2>Contact Me</h2>
+      <p>Email: krockzilla@gmail.com</p>
+      
+      <div class="social-icons">
+        <a href="https://www.instagram.com/krockzilla/" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.youtube.com/@krockzilla" target="_blank">
+          <i class="fab fa-youtube"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/karen-karolina-avila-a481bb291" target="_blank">
+          <i class="fab fa-linkedin"></i>
+        </a>
+      </div>
+    </section>
     
+
   </main>
 
   <footer>
