Added a contacts section to each page

--- a/photography.html
+++ b/photography.html
@@ -115,7 +115,23 @@
           <img src="images/darkroom/one.jpg" alt="B&W Darkroom 8" class="lightbox-thumb" data-full="images/darkroom/one.jpg">
         </div>
       </div>
-      
+  </section>
+
+  <section id="contact" class="contact-section">
+    <h2>Contact Me</h2>
+    <p>Email: krockzilla@gmail.com</p>
+    
+    <div class="social-icons">
+      <a href="https://www.instagram.com/krockzilla/" target="_blank">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://www.youtube.com/@krockzilla" target="_blank">
+        <i class="fab fa-youtube"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/karen-karolina-avila-a481bb291" target="_blank">
+        <i class="fab fa-linkedin"></i>
+      </a>
+    </div>
   </section>
 
   <script src="script.js"></script>
