--- a/films.html
+++ b/films.html
@@ -213,7 +213,24 @@
 
             </div>
         </div>
-        </section>
+    </section>
+
+    <section id="contact" class="contact-section">
+        <h2>Contact Me</h2>
+        <p>Email: krockzilla@gmail.com</p>
+        
+        <div class="social-icons">
+          <a href="https://www.instagram.com/krockzilla/" target="_blank">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="https://www.youtube.com/@krockzilla" target="_blank">
+            <i class="fab fa-youtube"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/karen-karolina-avila-a481bb291" target="_blank">
+            <i class="fab fa-linkedin"></i>
+          </a>
+        </div>
+      </section>
 
     <script src="script.js"></script>
     <script src="scripts/lightbox.js"></script>
