--- a/films.html
+++ b/films.html
@@ -31,7 +31,7 @@
         <div class="year-section">
             <div class="year-heading">
                 <h2 class="year-title">2024 Projects <span class="unreleased"></span></h2>
-                <span class="note-inline">* = Unreleased</span>
+                <span class="note-inline">* Unreleased</span>
               </div>
             <div class="projects">
 
