Changed ordering and organization of mobile my short films page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
     <section id="portfolio" class="portfolio-section">
       <h2 class="portfolio-heading">My Short Films</h2>
     
-      <div class="work-entry">
+      <div class="work-entry reverse">
+        <div class="work-image">
+          <a href="https://youtu.be/g4VSqUR9bO0?si=4fCpJPCTnSBP15dG" target="_blank" rel="noopener noreferrer">
+            <img src="images/As Above So Below.png" alt="As Above, So Below Thumbnail">
+          </a>
+        </div>
         <div class="work-description">
           <h3>As Above, So Below</h3>
           <p>
@@ -56,11 +61,6 @@
           <p>
             Her award-winning short film is featured at the <a href="https://ucsdfilmfestival.com/2024" target="_blank" rel="noopener noreferrer">2024 UCSD Film Festival</a>
           </p>
-        </div>
-        <div class="work-image">
-          <a href="https://youtu.be/g4VSqUR9bO0?si=4fCpJPCTnSBP15dG" target="_blank" rel="noopener noreferrer">
-            <img src="images/As Above So Below.png" alt="As Above, So Below Thumbnail">
-          </a>
         </div>
       </div>
 
@@ -82,7 +82,12 @@
         </div>
       </div>
 
-      <div class="work-entry">
+      <div class="work-entry reverse">
+        <div class="work-image">
+          <a href="https://youtu.be/UCGVfDwVa44?si=mPdSsH7qvkZGVS3z" target="_blank" rel="noopener noreferrer">
+            <img src="images/Congratulations you are now an American citizen.jpg" alt="Congratulations, you are now an American Citizen poster">
+          </a>
+        </div>
         <div class="work-description">
           <h3>Congratulations, you are now an American Citizen</h3>
           <p>
@@ -93,11 +98,6 @@
           <p>
             Selected for the documentary category of the <a href="https://ucsdfilmfestival.com/2023" target="_blank" rel="noopener noreferrer">2023 UCSD Film Festival</a>
           </p>
-        </div>
-        <div class="work-image">
-          <a href="https://youtu.be/UCGVfDwVa44?si=mPdSsH7qvkZGVS3z" target="_blank" rel="noopener noreferrer">
-            <img src="images/Congratulations you are now an American citizen.jpg" alt="Congratulations, you are now an American Citizen poster">
-          </a>
         </div>
       </div>
       <!-- Add more .work-entry blocks below as needed -->
